# MultiAsset

./: README.md
src/: CMakeLists.txt
src/3rd/: CMakeLists.txt  Makefile
src/3rd/snark/src/algebra/evaluation_domain/: evaluation_domain.tcc
src/3rd/snark/src/algebra/evaluation_domain/domains/: extended_radix2_domain.hpp  extended_radix2_domain.tcc  step_radix2_domain.hpp  step_radix2_domain.tcc
src/3rd/snark/src/common/: profiling.cpp
src/3rd/snark/src/gadgetlib1/: pb_variable.hpp
src/3rd/snark/src/gadgetlib1/gadgets/: basic_gadgets.hpp
src/3rd/snark/src/gadgetlib1/gadgets/hashes/: digest_selector_gadget.tcc
src/3rd/snark/src/gadgetlib1/gadgets/merkle_tree/: merkle_tree_check_read_gadget.tcc
src/3rd/snark/src/reductions/r1cs_to_qap/: r1cs_to_qap.tcc
src/3rd/snark/src/relations/constraint_satisfaction_problems/r1cs/: r1cs.hpp
src/compat/: byteswap.h  endian.h
src/crypto/: common.h
src/support/: cleanse.cpp
src/utils/: hash.h  serialize.h  uint252.h  uint256.cpp  utilstrencodings.cpp
src/zcash/: Address.cpp  Address.hpp  CMakeLists.txt  CreateJoinSplit.cpp  GenerateParams.cpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  JoinSplit.hpp  MultiAssetAccount.hpp  Note.cpp  Note.hpp  NoteEncryption.cpp  NoteEncryption.hpp  Proof.cpp  Proof.hpp  ShieldTransaction.cpp  ShieldTransaction.h  TestJoinSplit.cpp  Zcash.h  prf.cpp  prf.h  random.cpp  random.h  util.cpp
src/zcash/circuit/: commitment.tcc  gadget.tcc  merkle.tcc  note.tcc  utils.tcc
