
set(APP_MULTIASSET MultiAsset)
set(CMAKE_CXX_STANDARD 11)

aux_source_directory(${MULTIASSET_SOURCE}/zcash APP_SRC)
list(REMOVE_ITEM APP_SRC ${MULTIASSET_SOURCE}/zcash/GenerateParams.cpp)
#list(REMOVE_ITEM APP_SRC ${MULTIASSET_SOURCE}/zcash/CreateJoinSplit.cpp)
# aux_source_directory(${MULTIASSET_SOURCE}/zcash/circuit APP_SRC)

set(APP_MULTIASSET_SRC ${APP_SRC} ${MULTIASSET_DEPEND_SRC})

MESSAGE(STATUS "APP_SRC:" ${APP_SRC})
MESSAGE(STATUS "APP_MULTIASSET_SRC:" ${APP_MULTIASSET_SRC})
MESSAGE(STATUS "ZCASH_DEPEND_LIBS:" ${ZCASH_DEPEND_LIBS})

add_executable(${APP_MULTIASSET} ${APP_MULTIASSET_SRC})

target_link_libraries(${APP_MULTIASSET} ${ZCASH_DEPEND_LIBS} pthread bz2 z)
